--- a/tutor-here-frontend/package.json
+++ b/tutor-here-frontend/package.json
@@ -15,6 +15,7 @@
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.4",
+    "vue-slider-component": "^3.0.33",
     "vue2-google-maps": "^0.10.6",
     "vuelidate": "^0.7.4"
   },
@@ -25,6 +26,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
