--- a/tutor-here-frontend/package.json
+++ b/tutor-here-frontend/package.json
@@ -9,14 +9,16 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.18",
+    "bootstrap-vue": "^2.0.0-rc.26",
     "core-js": "^2.6.5",
+    "jquery": "^1.9.1",
     "vue": "^2.6.10",
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.4",
     "vue-slider-component": "^3.0.33",
     "vue2-google-maps": "^0.10.6",
+    "vuejs-loading-plugin": "^1.0.5",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
