--- a/tutor-here-frontend/package.json
+++ b/tutor-here-frontend/package.json
@@ -8,26 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.26",
-    "core-js": "^2.6.5",
-    "jquery": "^1.9.1",
+    "bootstrap-vue": "^2.0.0-rc.27",
+    "core-js": "^2.6.9",
+    "crypto-js": "^3.1.9-1",
+    "jquery": "^1.12.4",
+    "secure-ls": "^1.2.5",
     "vue": "^2.6.10",
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.4",
+    "vue-router": "^3.0.7",
     "vue-slider-component": "^3.0.33",
-    "vue2-google-maps": "^0.10.6",
+    "vue-star-rating": "^1.6.1",
+    "vue2-google-maps": "^0.10.7",
     "vuejs-loading-plugin": "^1.0.5",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-service": "^3.9.3",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
